Fixed page-sizing issue with main-page divs. Bootstrap took care of the floating elements overflowing into other divs.

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,7 +1,10 @@
 /* General Page CSS */
-.section {
-	min-height: 100vh;
+section {
+	min-height: 100vh !important;
 	width: 100vw;
+}
+
+.section {
 	padding-bottom: 20px;
 
 	text-align: center;
